--- a/web-ui/public/index.html
+++ b/web-ui/public/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
+    <link rel="icon" href="favicon.ico" type="image/ico"/>
     <title>Keg Scale</title>
   </head>
   <body>
