--- a/web-ui/public/index.html
+++ b/web-ui/public/index.html
@@ -6,12 +6,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
     <link rel="icon" href="favicon.ico" type="image/ico"/>
     <title>Keg Scale</title>
+    <script src="vendor-react.js"></script>
+    <script src="vendor-mui.js"></script>
+    <script src="vendor-chartjs.js"></script>
   </head>
   <body>
     <div id="root"></div>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <script src="bundle.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
