--- a/web-ui/public/index.html
+++ b/web-ui/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="favicon.ico" type="image/ico"/>
     <title>Keg Scale</title>
     <script src="vendor-mui.js"></script>
+    <script src="vendor-mui-x.js"></script>
     <script src="vendor-chartjs.js"></script>
   </head>
   <body>
